@@ -354,31 +354,11 @@
     <_title>!units!Angle</_title>
     <category>
       <_title>Plane Angle</_title>
-      <unit type="composite">
-        <hidden>true</hidden>
-        <title>Meter per Meter</title>
-        <names>r:m_p_m</names>
-        <part>
-          <unit>m</unit>
-          <prefix>0</prefix>
-          <exponent>1</exponent>
-        </part>
-        <part>
-          <unit>m</unit>
-          <prefix>0</prefix>
-          <exponent>-1</exponent>
-        </part>
-      </unit>
-      <unit type="alias">
+      <unit type="base">
         <system>SI</system>
         <_title>Radian</_title>
         <_names>ar:rad,radian,p:radians</_names>
         <use_with_prefixes>false</use_with_prefixes>
-        <base>
-          <unit>m_p_m</unit>
-          <relation>1</relation>
-          <exponent>1</exponent>
-        </base>
       </unit>
       <unit type="alias">
         <_title>Degree</_title>
@@ -430,21 +410,6 @@
     </category>
     <category>
       <_title>Solid Angle</_title>
-      <unit type="composite">
-        <hidden>true</hidden>
-        <title>Square Meter per Square Meter</title>
-        <names>r:sqm_p_sqm</names>
-        <part>
-          <unit>m</unit>
-          <prefix>0</prefix>
-          <exponent>2</exponent>
-        </part>
-        <part>
-          <unit>m</unit>
-          <prefix>0</prefix>
-          <exponent>-2</exponent>
-        </part>
-      </unit>
       <unit type="composite">
         <hidden>true</hidden>
         <title>Square Degree</title>
